update(js): move animate styles in App.vue to vueAnimations.css, and fix bug with non z-index on header

--- a/src/assets/css/vueAnimations.css
+++ b/src/assets/css/vueAnimations.css
@@ -67,3 +67,14 @@
 .slide-left-move {
   transition: all .35s ease-in-out;
 }
+
+.task-components-enter-active,
+.task-components-leave-active {
+  transition: all .25s ease-out;
+}
+
+.task-components-enter-from,
+.task-components-leave-to {
+  opacity: 0;
+  transform: translateY(-100px);
+}
